# twingraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  ny_demo_bess_01.twingraph.json  public_physical_bess_01.md  public_physical_bess_01.twingraph.json
schema/: twingraph-0.1.schema.json
skills/twingraph-compose/: SKILL.md
skills/twingraph-compose/agents/: openai.yaml
skills/twingraph-create/: SKILL.md
skills/twingraph-create/agents/: openai.yaml
skills/twingraph-edit/: SKILL.md
skills/twingraph-edit/agents/: openai.yaml
skills/twingraph-ingest/: SKILL.md
skills/twingraph-ingest/agents/: openai.yaml
skills/twingraph-typepacks/: SKILL.md
skills/twingraph-typepacks/agents/: openai.yaml
skills/twingraph-validate/: SKILL.md
skills/twingraph-validate/agents/: openai.yaml
src/twingraph/: __init__.py  _schema_tool.py  canonical.py  compat.py  compile.py  compose.py  document.py  errors.py  execution.py  fmi.py  ids.py  metis_expr.py  patch.py  primitives.py  programs.py  registry.py  units.py  viz.py
tests/: conftest.py  helpers.py  test_canonical.py  test_compile.py  test_compose.py  test_dependency_clean.py  test_domain_packs.py  test_execution.py  test_fmi.py  test_patch.py  test_primitives.py  test_programs.py  test_public_physical_bess_example.py  test_schema_parity.py  test_units.py  test_version.py  test_viz.py
tests/fixtures/: runtime-contracts-0.1.json
